<resources>
    <string name="app_name">پلنر سفر</string>
    <string name="tab_trips">سفرها</string>
    <string name="tab_todos">کارها</string>
    <string name="tab_profile">پروفایل</string>
    <string name="add_trip">افزودن سفر</string>
    <string name="add_todo">افزودن کار</string>
    <string name="title">عنوان</string>
    <string name="start_date">تاریخ شروع (yyyy-MM-dd)</string>
    <string name="end_date">تاریخ پایان (yyyy-MM-dd)</string>
    <string name="notes">یادداشت</string>
    <string name="save">ذخیره</string>
    <string name="logout">خروج</string>
    <string name="google_maps_key">AIzaSySampleKeyForDebugOnly</string>
    J34567890-abcdefg.apps.googleusercontent.com</string>
</resources>
